--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* font-family: "Montserrat", sans-serif;
 font-family: "Abril Fatface", serif; */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   background-image: url("./assets/background.png"); /* Set the background image */
-  background-size: cover; /* Make sure the image covers the whole page */
+  background-size: cover; /* Ensure the image covers the entire container */
   background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Prevent the image from repeating */
-  height: 100vh; /* Set height to 100% of the viewport */
-  margin: 0;
-  overflow: hidden;
+  background-repeat: no-repeat; /* Prevent repetition of the image */
+  background-attachment: fixed; /* Fix the background so it doesn't scroll */
+  height: 100%; /* Let the body take the full height of the viewport */
+  width: 100%; /* Full width */
+  overflow-x: hidden; /* Disable horizontal scrolling */
+  overflow-y: auto; /* Allow vertical scrolling */
 }
+
 html {
   font-size: 10px;
 }
