--- a/src/Styles/Newarrival.css
+++ b/src/Styles/Newarrival.css
@@ -62,6 +62,10 @@
   background-color: #fff;
   padding: 1rem;
 }
+.link-image:hover {
+  transform: scale(1.05);
+  transition: transform 0.5s ease-in-out;
+}
 
 /* Set the container dimensions */
 .link-product-sub {
