--- a/src/Styles/collection.css
+++ b/src/Styles/collection.css
@@ -70,14 +70,9 @@ select {
   text-decoration-line: none;
 }
 .right-collection {
-  display: flex;
-
-  margin: 0rem 2rem;
+  padding: 2rem 8rem;
 }
 .total-right-collection {
-  justify-content: space-between;
-  align-items: center;
-  flex: 1;
 }
 .collection-products {
   display: grid;
@@ -107,5 +102,41 @@ select {
   .right-collection {
     gap: 0;
     justify-content: space-between;
+  }
+}
+@media (max-width: 500px) {
+  .filter-box.hidden {
+    display: none;
+  }
+  .filter-img {
+    display: block;
+  }
+  .collection {
+    justify-content: center;
+    padding: 2rem 4rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .collection-products {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(2, 2fr);
+  }
+  .right-collection {
+    padding: 1rem 2rem;
+    gap: 0;
+    justify-content: space-between;
+  }
+  .collection-products {
+    align-items: center;
+    justify-content: center;
+  }
+  .filter {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  select {
+    font-size: 1.5rem;
+    margin: 0;
   }
 }
