--- a/src/Styles/collection.css
+++ b/src/Styles/collection.css
@@ -83,6 +83,10 @@ select {
   gap: 2rem;
   grid-template-columns: repeat(4, 4fr);
 }
+option {
+  border: none;
+  border-color: none;
+}
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
@@ -131,8 +135,9 @@ select {
   .right-collection {
     padding: 1rem 2rem;
     gap: 0;
-    justify-content: space-between;
+    flex-direction: column;
   }
+
   .collection-products {
     align-items: center;
     justify-content: center;
