working on the product display

--- a/src/Styles/product.css
+++ b/src/Styles/product.css
@@ -1,24 +1,157 @@
 .product-display {
-  border-bottom: 1px solid #fff;
-  border-top: 1px solid #fff;
-  transition-duration: 0.5s ease-in;
-  opacity: 100;
-}
-.product-display-sub {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
+
+.product-display-sub {
+  display: flex;
+  padding: 2rem 8rem;
+}
+
 .product-display-sub2 {
-  flex: 1;
-  flex-direction: column-reverse;
-  gap: 3rem;
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
 }
+
 .product-display-sub3 {
   display: flex;
   flex-direction: column;
-  overflow-x: auto;
-  overflow-y: scroll;
-  justify-content: space-between;
+  margin-right: 20px;
+}
+
+/* Thumbnail */
+.image-display {
+  width: 15rem;
+  padding: 2rem;
+  background-color: #fff;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border-radius: 1rem;
+  border: 2px solid transparent;
+  transition: border 0.3s ease;
+}
+
+.image-display:hover {
+  border: 2px solid #4b0055;
+  transition: 0.5s;
+  transform: scale(1.05);
+}
+
+.product-main-image {
+  width: 40rem;
+  overflow: hidden;
+  padding: 2rem;
+  object-fit: contain;
+  display: flex;
+
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+.selected-image {
   width: 30rem;
+  height: 40rem;
+  object-fit: contain;
+  border-radius: 10px;
+}
+.product-details {
+  padding: 2rem 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  color: #fff;
+  flex: 1;
+}
+.product-details h1 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+.product-details h3 {
+  font-size: 1.5rem;
+}
+.product-details p {
+  font-size: 1.5rem;
+  font-weight: 100;
+  font-family: "Montserrat", sans-serif;
+}
+.product-details h1 span,
+.product-details h3 span,
+.product-details p span {
+  font-family: "Abril Fatface", serif;
+  font-size: 2rem;
+  font-weight: 100;
+  line-height: 2rem;
+  color: #fff;
+  padding: 0.2rem;
+  margin-right: 1rem;
+  border-radius: 0.5rem;
+}
+.product-details button:hover {
+  background-color: #fff;
+
+  border: none;
+  color: #4b0055;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+}
+.product-details button {
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
+  width: 15rem;
+  padding: 0.5rem 1rem;
+  background-color: #4b0055;
+  color: #fff;
+  border: 1px solid #fff;
+}
+.star-images {
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  color: gold;
+}
+.star-images p {
+  color: #fff;
+}
+@media (max-width: 769px) {
+  .product-display {
+    padding: 0 4rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  .product-display-sub {
+    padding: 2rem;
+  }
+  .product-display-sub3 {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .product-main-image {
+    width: 30rem;
+
+    object-fit: contain;
+    height: fit-content;
+  }
+  .product-display-sub2 {
+    display: grid;
+    grid-template-columns: repeat(2fr, 1fr);
+  }
+  .selected-image {
+    width: 20rem;
+    height: 30rem;
+    object-fit: contain;
+    margin-top: 10px;
+  }
+  .main-and-text {
+    display: flex;
+    flex-direction: row;
+  }
+  .product-details {
+    padding: 2rem 0;
+  }
 }
