working on image display

--- a/src/Styles/product.css
+++ b/src/Styles/product.css
@@ -106,6 +106,9 @@
   color: #fff;
   border: 1px solid #fff;
 }
+.product-details button:active {
+  opacity: 0.7;
+}
 .star-images {
   font-size: 1.5rem;
   display: flex;
@@ -155,3 +158,4 @@
     padding: 2rem 0;
   }
 }
+/* testing */
