--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -75,9 +75,10 @@
   top: -1rem;
   right: -1rem;
   text-align: center;
-  color: white;
-  background-color: green;
-  padding: 0.2rem;
+  color: #460364;
+  border: 1px solid #460364;
+  background-color: #fff;
+  padding: 0.2rem 0.4rem;
   border-radius: 50%;
   font-size: 1.1rem;
   font-weight: 900;
