--- a/src/Styles/cart.css
+++ b/src/Styles/cart.css
@@ -1,9 +1,7 @@
 .cart-display {
   display: flex;
   flex-direction: column;
-  align-items: left;
-  justify-content: left;
-  float: left;
+
   padding: 2rem 8rem;
   width: 100%; /* Occupies full width */
   max-width: 1200px;
@@ -12,10 +10,16 @@
 .cart-item {
   display: flex;
   align-items: center;
-  gap: 2rem;
-  padding: 1rem 0;
-  border-bottom: 1px solid #fff;
-  border-top: 1px solid #fff;
+  gap: 20rem;
+  padding: 1rem;
+  margin: 1rem 0;
+  /* border-bottom: 1px solid #fff;
+  border-top: 1px solid #fff; */
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.7);
+}
+.cart-item:hover {
+  transition: 0.5s;
+  transform: scale(1.05);
 }
 .cart-item img {
   width: 8rem;
@@ -44,4 +48,102 @@
 }
 .cart-image-details p {
   font-size: 1.5rem;
+}
+/* for calculation of product in the cart  */
+.Total-cart-total {
+  width: 50rem;
+  margin-top: 2rem;
+}
+.cart-total-sub {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 1rem;
+}
+.cart-total-details {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  background-color: #fff;
+}
+.cart-total-details h2 {
+  font-size: 1.5rem;
+  color: #4b0055;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+}
+.cart-total-details p {
+  color: green;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.cart-total-details b {
+  font-size: 1.7rem;
+  color: green;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+}
+
+.qauntity-input {
+  width: 8rem;
+  padding: 0.4rem 1rem;
+  overflow: scroll;
+  border: 1px solid #fff;
+  border-radius: 0.5rem;
+  background-color: #4b0055;
+  color: #fff;
+  font-size: 1.5rem;
+}
+.trash-bin {
+  color: #fff;
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .cart-item {
+    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+  }
+  .cart-display {
+    padding: 2rem 6rem;
+  }
+  .cart-item p {
+    gap: 0;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 600px) {
+  .Total-cart-total {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 30rem;
+    padding: 2rem 2rem;
+    margin: 0 -5rem;
+  }
+  .cart-item img {
+    width: 6rem;
+    border-radius: 0.5rem;
+  }
+  .cart-display {
+    padding: 2rem 4rem;
+  }
+  .qauntity-input {
+    width: 6rem;
+  }
+  .cart-total-details {
+    gap: 1.5rem;
+    padding: 1rem 2rem;
+  }
+  .cart-total-details h2 {
+    font-size: 1.2rem;
+  }
+  .cart-total-details p {
+    font-size: 1.2rem;
+  }
+  .trash-bin {
+    font-size: 2rem;
+  }
 }
