--- a/src/Styles/collection.css
+++ b/src/Styles/collection.css
@@ -103,6 +103,7 @@ option {
 }
 .search-bar-sub {
   width: 50rem;
+
   border-radius: 3rem;
   display: inline-flex;
   justify-items: center;
@@ -118,7 +119,7 @@ option {
   color: #4b0055;
   font-style: italic;
 }
-input {
+.search-input {
   justify-content: center;
   align-items: center;
   padding: 1rem 2rem;
@@ -149,14 +150,21 @@ input {
   cursor: pointer;
 }
 .not-found {
+  width: 50rem;
   font-size: 1.5rem;
+  font-weight: 100;
   color: #fff;
+  padding: 2rem 4rem;
+
+  font-family: "Montserrat", sans-serif;
 }
 .loader {
   font-size: 1.5rem;
   text-align: center;
   margin: 2rem 0;
   color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 100;
 }
 /* Media query for smaller screens */
 @media (max-width: 768px) {
