--- a/src/Styles/Newarrival.css
+++ b/src/Styles/Newarrival.css
@@ -58,10 +58,12 @@
   flex-direction: column;
   padding: 1rem 2rem;
   gap: 1rem;
+  font-size: 1.4rem;
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
   margin-bottom: 2rem;
 }
+
 .Total-link-product-sub button {
   font-family: "Abril Fatface";
   font-size: 1.5rem;
