--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,11 @@ font-family: "Abril Fatface", serif; */
   padding: 0;
   box-sizing: border-box;
 }
+a {
+  text-decoration: none;
 
+  color: inherit;
+}
 body {
   background-image: url("./assets/background.png");
   background-size: cover;
@@ -59,14 +63,16 @@ html {
 .total-policy {
   display: grid;
   grid-template-columns: repeat(2fr, 2fr);
-  justify-content: center;
   place-items: center;
   text-align: center;
-  margin-bottom: 5rem;
+  max-width: 100%;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
   padding: 4rem 8rem;
   align-content: center;
+  margin: 2rem 8rem;
 
-  border-radius: 35px;
+  border-bottom-left-radius: 5rem;
+  border-bottom-right-radius: 5rem;
 }
 .policy {
   display: flex;
